--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,13 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p class="pre">
-          ☁️  cloud engineer<br>
+          ☁️  sr. cloud infrastructure engineer<br>
           🏂 snowboarding enthusiast<br>
           🍞 carb addict<br>
           🏘 amateur real estate investor<br>
           💃🏻 dancer<br>
-          💩 sensitive striver<br>
+          ✈️  traveler<br>
+          📖 learner<br>
           👾 ex-gamer with semi-annual relapses<br>
           ☕️ fueled by caffeine<br>
         </p>
