Test adding a post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,12 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        {% for post in site.posts %}
+          <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </li>
+        {% endfor %}
       </header>
       <section>
 
