--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        {% include navigation.html %}<br>
+
         <p class="pre">
           ☁️  sr. cloud infrastructure engineer<br>
           🏂 snowboarding enthusiast<br>
@@ -34,9 +36,6 @@
           ☕️ fueled by caffeine<br>
         </p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
@@ -50,11 +49,6 @@
         </ul>
         {% endif %}
 
-        {% for post in site.posts %}
-          <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-          </li>
-        {% endfor %}
       </header>
       <section>
 
@@ -63,7 +57,8 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
       </footer>
     </div>
@@ -78,5 +73,6 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+
   </body>
 </html>
