Add anthos fellow post and journal entry

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,9 @@ layout: default
 
 {{ content }}
 
+{% comment %}
 <b>tags</b><br>
 {% for tag in page.tags %}
   {{ tag }}<br>
 {% endfor %}
+{% endcomment %}
