--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,10 @@
         <a href="https://github.com/Lynty" target="_blank"><img src="/assets/images/github.png" alt="github" style="width:32px;height:32px;"></a>
         <a href="https://twitter.com/lynnux_io" target="_blank"><img src="/assets/images/twitter.png" alt="twitter" style="width:32px;height:32px;"></a>
 
+        <br>
+        <br>
+        <span style="color:black;line-height:1px;font-size:10px">I forgot how taxing it is to create public posts. You have to form coherent sentences from your jumbled thoughts, need to be grammatically correct, be politically correct, provide content that is correct, and adhere to all the other forms of correctness. Consider this a disclaimer that in my efforts to consistently jot down ideas and provide content with as little resistance as possible, I'm easing up <i>just a tad</i> on the level of correctness. </span><br>
+
         {% comment %}
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
