--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+  margin:0 0 14px;
 }
 
 h1, h2, h3 {
@@ -31,10 +31,13 @@ h1 {
 }
 
 h2 {
+  font-size:20px;
   color:#393939;
 }
 
 h3, h4, h5, h6 {
+  font-size:16px;
+  font-weight:400;
   color:#494949;
 }
 
