--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -110,6 +110,12 @@ img {
   max-width:100%;
 }
 
+figure {
+  text-align: center;
+  color:#222;
+  font-style: italic;
+}
+
 kbd {
   background-color: #fafbfc;
   border: 1px solid #c6cbd1;
