Change font color css

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -28,11 +28,12 @@ h1, h2, h3 {
 
 h1 {
   font-size:32px;
+  color:#1F2E49;
 }
 
 h2 {
   font-size:20px;
-  color:#393939;
+  color:#D8A440;
 }
 
 h3, h4, h5, h6 {
@@ -112,7 +113,7 @@ img {
 
 figure {
   text-align: center;
-  color:#222;
+  color:#1F2E49;
   font-style: italic;
 }
 
