Add post, gitattributes for git-lfs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           ☁️  sr. cloud infrastructure engineer<br>
           🏂 snowboarder<br>
           🍞 carb addict<br>
-          🏘 amateur real estate investor<br>
+          🏘 real estate investor<br>
           💃🏻 dancer<br>
           ✈️  traveler<br>
           📖 learner<br>
