Add post navigation and more css updates

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,11 @@
 <nav>
-  <a href="/" {% if page.url == "/" %}style="color: purple;"{% endif %}>
+  <h2><a href="/" {% if page.url == "/" %}style="color: #D8A440;"{% endif %}>
     Home
-  </a><br>
-  <a href="/posts.html" {% if page.url == "/posts.html" %}style="color: purple;"{% endif %}>
+    </a></font><br>
+  <a href="/posts.html" {% if page.url == "/posts.html" %}style="color: #D8A440;"{% endif %}>
     Posts
   </a><br>
-  <a href="/about.html" {% if page.url == "/about.html" %}style="color: purple;"{% endif %}>
+  <a href="/about.html" {% if page.url == "/about.html" %}style="color: #D8A440;"{% endif %}>
     About
-  </a><br>
+  </a></h2>
 </nav>
