--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,3 +12,12 @@ layout: default
   {{ tag }}<br>
 {% endfor %}
 {% endcomment %}
+
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
