Add aspiring blockchain dev to left column

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
 
         <p class="pre">
           ☁️  sr. cloud infrastructure engineer<br>
+          👩🏻‍💻 aspiring blockchain developer<br>
           🏂 snowboarder<br>
           🍞 carb addict<br>
           🏘 real estate investor<br>
