--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,12 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        {% include navigation.html %}<br>
+        <br>
+        <br>
+        {% include navigation.html %}
 
         <p class="pre">
-          ☁️  staff cloud infrastructure engineer<br>
-          👩🏻‍💻 aspiring blockchain developer<br>
+          ☁️  customer engineer at google<br>
           🏂 snowboarder<br>
           🍞 carb addict<br>
           🏘 real estate investor<br>
@@ -35,18 +34,14 @@
           ✈️  traveler<br>
           📖 learner<br>
           👾 ex-gamer with semi-annual relapses<br>
-          😶 introvert<br>
           ☕️ fueled by caffeine<br>
         </p><br>
 
         <a href="https://linkedin.com/in/lynndong" target="_blank"><img src="/assets/images/linkedin.png" alt="linkedin" style="width:32px;height:32px;"></a>
         <a href="https://github.com/Lynty" target="_blank"><img src="/assets/images/github.png" alt="github" style="width:32px;height:32px;"></a>
-        <a href="https://twitter.com/lynnux_io" target="_blank"><img src="/assets/images/twitter.png" alt="twitter" style="width:32px;height:32px;"></a>
 
         <br>
         <br>
-        <span style="color:black;line-height:1px;font-size:10px">I forgot how taxing it is to create public posts. You have to form coherent sentences from your jumbled thoughts, need to be grammatically correct, be politically correct, provide content that is correct, and adhere to all the other forms of correctness. Consider this a disclaimer that in my efforts to consistently jot down ideas and provide content with as little resistance as possible, I'm easing up <i>just a tad</i> on the level of correctness. </span><br>
-
         {% comment %}
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
